Added offers functionality. Fix login errors

--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -6,10 +6,20 @@
     background-color: #fff;
   }
 
+  .panel-body {
+    padding: 15px;
+    background-color: #F2F2F2;
+    border: 1px solid #C7C7C7;
+  }
+
   .account-settings-options {
     .welcome-block {
       margin-bottom: 5px;
       border-radius: 4px;
+
+      a {
+        color: #fff;
+      }
     }
 
     .panel-heading {
@@ -25,4 +35,63 @@
     }
 
   }
+
+  .manage {
+    background-color: #a88f32;
+    color: #fff
+  }
+
+  .enthusiast {
+    background-color: #df9300;
+    color: #fff
+  }
+
+  .coaching {
+    background-color: #a3529a;
+    color: #fff;
+  }
+
+  .playing {
+    background-color: #255bac;
+    color: #fff;
+  }
+
+  .facilities {
+    background-color: #41ac34;
+    color: #fff;
+  }
+
+  .suppliers {
+    background-color: #ac550d;
+    color: #fff;
+  }
+
+  .events {
+    background-color: #ac1531;
+    color: #fff;
+  }
+
+  .offers {
+    background-color: #136569;
+    color: #fff;
+  }
+
+  .manage-listing {
+    margin-top: 30px;
+    background-color: #29272a;
+    color: #fff;
+  }
+
+  .manage-list {
+    ul {
+      padding: 0;
+    }
+
+    li {
+      list-style-type: none;
+      font-size: 16px;
+    }
+
+  }
+
 }
