--- a/src/app/app.less
+++ b/src/app/app.less
@@ -40,12 +40,6 @@
   color: #525252
 }
 
-.personl-details {
-  background-color: #df9300 !important;
-  color: #fff !important
-}
-
-
 .right-space {
   margin-right: 5px
 }
@@ -62,15 +56,7 @@
   margin-left: 10px
 }
 
-.coaching {
-  background-color: #a3529a !important;
-  color: #fff !important;
-}
 
-.certification {
-  background-color: #255bac !important;
-  color: #fff !important;
-}
 
 .nav-tabs > li.active > a.certificate {
   background-color: #255bac !important;
@@ -436,7 +422,7 @@ label.overflow {
 
 .form-group {
 
-  input.ng-invalid.ng-touched {
+  input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched, select.ng-invalid.ng-touched {
     border: 1px solid #BD0F0F;
   }
 
@@ -447,6 +433,12 @@ label.overflow {
   .errorMessages {
     transition: 1s linear all;
     color: #BD0F0F;
+    padding-left: 4px;
+  }
+
+  .infoMessages {
+    transition: 1s linear all;
+    color: #1BA677;
     padding-left: 4px;
   }
 
