--- a/src/app/shared/header/header.tpl.html
+++ b/src/app/shared/header/header.tpl.html
@@ -53,7 +53,7 @@
                                 </li>
                                 <li><a href="{{quickSettings.events.url}}" class="events search-img"><span>{{quickSettings.events.title}}</span></a>
                                 </li>
-                                <li><a href="{{quickSettings.offers.url}}" class="all search-img"><span>{{quickSettings.offers.title}}r</span></a>
+                                <li><a href="{{quickSettings.offers.url}}" class="all search-img"><span>{{quickSettings.offers.title}}</span></a>
                                 </li>
                                 <li><a href class="pull-right" ng-click="logout()"><span>Logout</span></a></li>
                             </ul>
