added layout for listed offers

--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -83,13 +83,23 @@
   }
 
   .manage-list {
-    ul {
-      padding: 0;
-    }
+    width: 95%;
+    margin: auto auto 10px;
 
-    li {
-      list-style-type: none;
-      font-size: 16px;
+    .glyphicon {
+      font-size: 12px;
+      padding: 4px;
+    }
+  }
+
+}
+
+@media (max-width: 768px) {
+
+  .account-settings {
+
+    .account-settings-options, .right-ad {
+      display: none;
     }
 
   }
