--- a/src/app/app.less
+++ b/src/app/app.less
@@ -457,6 +457,10 @@ h1, .h1 {
   h1, .h1 {
     font-size: 23px;
   }
+
+  .border-right-dotted {
+    border-right: 1px dotted #878787;
+  }
 }
 
 @media (max-width: 480px) {
