--- a/src/app/search/bar/search.bar.tpl.html
+++ b/src/app/search/bar/search.bar.tpl.html
@@ -10,12 +10,13 @@
     </div>
     <div class="search-filters dropdown-menu">
         <ul>
-            <li><a href="#" class="all search-img"><span>All</span></a></li>
-            <li><a href="#" class="coaches search-img"><span>Coaches</span></a></li>
-            <li><a href="#" class="players search-img"><span>Players</span></a></li>
-            <li><a href="#" class="facilities search-img"><span>Facilities</span></a></li>
-            <li><a href="#" class="events search-img"><span>Events</span></a></li>
-            <li><a href="#" class="suppliers search-img"><span>Suppliers</span></a></li>
+            <li><a href class="all search-img"><span>All</span></a></li>
+            <li><a href class="coaches search-img"><span>Coaches</span></a></li>
+            <li><a href class="players search-img"><span>Players</span></a></li>
+            <li><a href class="facilities search-img"><span>Facilities</span></a></li>
+            <li><a href class="suppliers search-img"><span>Suppliers</span></a></li>
+            <li><a href class="events search-img"><span>Events</span></a></li>
+            <li><a href class="all search-img"><span>Offers</span></a></li>
         </ul>
     </div>
 </div>
