--- a/src/app/account/settings/account.settings.tpl.html
+++ b/src/app/account/settings/account.settings.tpl.html
@@ -67,7 +67,7 @@
             <div class="col-sm-7 col-lg-7">
                 <ng-include src="formTemplate"></ng-include>
             </div>
-            <div class="col-sm-2 col-lg-2 form-group snowlink">
+            <div class="col-sm-2 col-lg-2 form-group right-ad">
                 Ad
             </div>
         </div>
